<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_add_titulo">Títutlo</string>
    <string name="txt_add_descricao">Descrição</string>
    <string name="txt_menu_list_fragment_procurar">Procurar</string>
    <string name="txt_menu_list_frament_ordernar">Ordem por</string>
    <string name="txt_menu_ordernar_prioridade_alta">Prioridade Alta</string>
    <string name="txt_menu_ordernar_prioridade_baixa">Prioridade Baixa</string>
    <string name="txt_menu_deletar_todos">Deletar Todos</string>
    <string name="txt_menu_add_fragment_add">Adicionar</string>
    <string name="txt_menu_update_fragment_salvar">Salvar</string>
    <string name="txt_menu_update_fragment_excluir">Excluir</string>
</resources>